bug with overflow fixed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,7 @@ html, body {
   width: 100%;
   max-width: 100%;
   font-family: Gilroy!important;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .v-application,
